--- a/arch/x86/vdso/Makefile
+++ b/arch/x86/vdso/Makefile
@@ -189,7 +189,7 @@ GCOV_PROFILE := n
 #
 quiet_cmd_vdso_install = INSTALL $@
       cmd_vdso_install = cp $(obj)/$@.dbg $(MODLIB)/vdso/$@
-$(vdso-install-y): %.so: $(obj)/%.so.dbg FORCE
+$(vdso-install-y): %.so: $(obj)/%.so.dbg
 	@mkdir -p $(MODLIB)/vdso
 	$(call cmd,vdso_install)
 
