--- a/drivers/platform/test/Kconfig
+++ b/drivers/platform/test/Kconfig
@@ -14,4 +14,11 @@ config TESTPLUS_ONLY
 	  Support for LYF mobee01a variants
 	  make macro CONFIG_TEST_ONLY WORKED
 
+config TBW5770A2_ONLY
+	bool "LYF TBW5770A2"
+	depends on ARCH_MSM8916
+	help
+	  Support for LYF TBW5770A2 variants
+	  make macro CONFIG_TBW5770A2_ONLY WORKED
+
 
