--- a/arch/arm/boot/dts/qcom/msm8916-qrd-skui-TBW5770A2.dts
+++ b/arch/arm/boot/dts/qcom/msm8916-qrd-skui-TBW5770A2.dts
@@ -111,22 +111,49 @@
 			focaltech,ignore-id-check;
 		};
 
-		goodix@5d {
+		gt9xx-i2c@5d {
 			compatible = "goodix,gt9xx";
 			reg = <93>;
 			interrupt-parent = <&msm_gpio>;
 			interrupts = <13 0x1>;
-			reset-gpios = < 0x48 0x0c 0x00 >;
-			interrupt-gpios = < 0x48 0x0d 0x00 >;
-			vdd-supply = <&pm8916_l17>;
-			vdd-io-supply = <&pm8916_l16>;
+			pinctrl-names = "gdix_ts_int_default",
+				"gdix_ts_int_output_low",
+				"gdix_ts_int_output_high",
+				"gdix_ts_int_input",
+				"gdix_ts_rst_default",
+				"gdix_ts_rst_output_low",
+				"gdix_ts_rst_output_high",
+				"gdix_ts_rst_input";
+			pinctrl-0 = <&gdix_ts_int_default>;
+			pinctrl-1 = <&gdix_ts_int_output_low>;
+			pinctrl-2 = <&gdix_ts_int_output_high>;
+			pinctrl-3 = <&gdix_ts_int_input>;
+			pinctrl-4 = <&gdix_ts_rst_default>;
+			pinctrl-5 = <&gdix_ts_rst_output_low>;
+			pinctrl-6 = <&gdix_ts_rst_output_high>;
+			pinctrl-7 = <&gdix_ts_rst_input>;
+			reset-gpios = <&msm_gpio 12 0>;
+			irq-gpios = <&msm_gpio 13 0>;
+			irq-flags = <1>;
+			vdd_ana-supply = <&pm8916_l16>;
 			vcc_i2c-supply = <&pm8916_l6>;
-			goodix,i2c-pull-up;
-			goodix,panel-coords = <0 0 720 1400>;
-			goodix,display-coords = <0 0 720 1280>;
-			goodix,button-map= <158 102 139>;
-			goodix,vir-button-codes = <139 90 1340 100 80 172 360 1340 100 80 158 630 1340 100 80>;
-			goodix,family-id = <0>;
+			touchscreen-max-id = <5>;
+			touchscreen-size-x = <720>;
+			touchscreen-size-y = <1280>;
+			touchscreen-max-w = <512>;
+			touchscreen-max-p = <512>;
+			touchscreen-key-map = <158>, <102>, <139>; /*KEY_BACK=158，KEY_HOMEPAGE=102, KEY_MENU=139*/
+			goodix,slide-wakeup = <0>;
+			goodix,type-a-report = <0>;
+			goodix,driver-send-cfg = <1>;
+			goodix,resume-in-workqueue = <0>;
+			goodix,int-sync = <1>;
+			goodix,swap-x2y = <0>;
+			goodix,esd-protect = <1>;
+			goodix,auto-update = <0>;
+			goodix,auto-update-cfg = <0>;
+			goodix,power-off-sleep = <1>;
+			goodix,pen-suppress-finger = <0>;
 			goodix,cfg-count = <2 0 2 0 0 0 0>;
 			goodix,cfg-data0 = [ 41 d0 02 00 05 05 35 01 01 0f 28 05 50 32 03 05 00 00 00 00 00 00 00 17 19 1f 14 8c 2e 0e 44 42 d4 07 00 00 00 5b 02 11 00 00 00 00 00 00 00 08 0a 00 00 32 64 94 c5 02 07 00 00 04 94 35 00 86 3d 00 7b 46 00 71 51 00 69 5d 00 69 18 40 60 00 f0 4a 3a ff ff 27 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 02 04 06 08 0a 0c 0e 10 12 14 16 18 1a 1c 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 02 04 06 08 0a 0c 0f 10 12 13 14 16 18 1c 1d 1e 1f 20 21 22 24 26 28 29 2a 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 2f 01 ];
 			goodix,cfg-data2 = [ 41 d0 02 00 05 05 35 01 01 08 28 05 50 32 03 05 00 00 00 00 00 00 00 17 19 1e 14 8c 2c 0d 44 42 d4 07 00 00 01 42 02 11 00 00 00 00 00 00 00 08 0a 00 00 32 64 94 c5 02 07 00 00 04 96 35 00 87 3d 00 7a 46 00 6f 51 00 67 5d 00 67 18 38 58 00 f0 4a 3a ff ff 27 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 02 04 06 08 0a 0c 0e 10 12 14 16 18 1a ff 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 16 18 1c 1d 1e 1f 20 21 22 24 26 28 14 13 12 10 0f 0c 0a 08 06 04 02 00 ff ff 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 d8 01 ];
@@ -221,6 +248,60 @@
 				bias-pull-down;
 			};
 		};
+
+		goodix_ts_int {
+			qcom,pins = <&gp 13>;
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "goodix_ts_int";
+
+			gdix_ts_int_default: gdix_ts_int_default {
+				drive-strength = <2>;
+				input-enable;
+				bias-disable;
+			};
+
+			gdix_ts_int_output_high: gdix_ts_int_output_high {
+				output-high;
+			};
+
+			gdix_ts_int_output_low: gdix_ts_int_output_low {
+				output-low;
+			};
+
+			gdix_ts_int_input: gdix_ts_int_input {
+				input-enable;
+				bias-disable;
+			};
+		};
+
+		goodix_ts_rst {
+			qcom,pins = <&gp 12>;
+			qcom,pin-func = <0>;
+			qcom,num-grp-pins = <1>;
+			label = "goodix_ts_rst";
+
+			gdix_ts_rst_default: gdix_ts_rst_default {
+				drive-strength = <2>;
+				input-enable;
+				bias-disable;
+			};
+
+			gdix_ts_rst_output_high: gdix_ts_rst_output_high {
+				output-high;
+			};
+
+			gdix_ts_rst_output_low: gdix_ts_rst_output_low {
+				output-low;
+			};
+
+			gdix_ts_rst_input: gdix_ts_rst_input {
+				input-enable;
+				bias-disable;
+			};
+		};
+
+
 	};
 
 	qcom,ion {
